--- a/style.css
+++ b/style.css
@@ -1,48 +1,48 @@
 div.container{
-  background-color: rgba(175, 184, 190, .2);
+  
   margin: 10%;
-  height: 50vh;
+
+  max-width: 1200px;
   
 }
 
-.widget-row{
-  display: inline;
-  background-color: inherit;
+div.widget{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+
 }
 
 .header-row{
   padding: 1%;
+  display: inline;
+
 }
 
-.head-title{
-  display: inline;
-  /* padding: 1%; */
-  /* text-align: center; */
-}
 
 .item-title{
+  
   font-size: 1.5em;
-  font-family: 'Bree Serif', serif;    
+  font-family: 'Bree Serif', serif;   
+  
+  
 }
 
-.branding{
+.item-brand{
   color: gray;
   font-size: 1em;
+  /* display: inline-block; */
 }
 
 .disclosure{
  float: right;
- /* padding: 1%; */
  
 }
 
 .item img{
   width: 100%;
-  height: 70%;
-  overflow: hidden;
-  max-width: 300px;
-  max-height: 300px;
-  
+  height: 60%;
 
 }
 
@@ -51,18 +51,26 @@ div.container{
   padding: 1%;
   float: left;
   width: 31.3333%;
-  height: 70%;
-  background-color: inherit;
-
+  background-color: rgba(175, 184, 190, .2);
+  flex-grow: 1;
+  text-overflow:ellipsis;
 }
 
 @media only screen and (max-width: 767px) {
+
+  .widget{
+    justify-content: space-around;
+  }
   .item {
       width: 48%;
   }
 }
 
 @media only screen and (max-width: 568px) {
+
+  .widget{
+    flex-direction: column;
+  }
   .item {
     width: 98%;
   }
