--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 div.container{
-  
+  background-color: rgba(175, 184, 190, .2);
   margin: 10%;
-
   max-width: 1200px;
+
   
 }
 
@@ -16,44 +16,55 @@ div.widget{
 
 .header-row{
   padding: 1%;
-  display: inline;
+}
 
+.head-title{
+  
+  display: inline;
+  font-size: 1.2em;
+  font-family: 'Bree Serif', serif;
 }
 
 
 .item-title{
-  
-  font-size: 1.5em;
-  font-family: 'Bree Serif', serif;   
-  
-  
+  width: 100%;
+  height: 30%;   
+
+}
+.category{
+  font-style: italic;
+  font-family: 'Bree Serif', serif;
 }
 
 .item-brand{
   color: gray;
   font-size: 1em;
-  /* display: inline-block; */
 }
 
 .disclosure{
- float: right;
+  display: inline;
+  float: right;
  
+
+}
+
+.link{
+  color:black;
+  text-decoration: none; 
+   background-color: none;
 }
 
 .item img{
   width: 100%;
   height: 60%;
-
 }
-
 
 .item {
   padding: 1%;
   float: left;
   width: 31.3333%;
-  background-color: rgba(175, 184, 190, .2);
   flex-grow: 1;
-  text-overflow:ellipsis;
+  height: 20%;
 }
 
 @media only screen and (max-width: 767px) {
